# datastructures

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
hashmap/: hashmap.c  hashmap.h  hashmap_test.c
linked_list/: linked_list.c  linked_list.h
node/: node.c  node.h  node_test.c
trees/binary_tree/: binary_tree.c  binary_tree.h  binary_tree_test.c
trees/tree/: tree.c  tree.h  tree_test.c
trees/tree_node/: tree_node.c  tree_node.h
trees/trie/: trie.c  trie.h
